[gd_scene load_steps=5 format=2]

[ext_resource path="res://tui/tuiButton_pure.tscn" type="PackedScene" id=1]
[ext_resource path="res://tui/tuiChoicePopup.gd" type="Script" id=2]
[ext_resource path="res://tui/tuiLabel_pure.tscn" type="PackedScene" id=3]
[ext_resource path="res://tui/tuiPopup.tscn" type="PackedScene" id=4]

[node name="tuiChoicePopup" instance=ExtResource( 4 )]
script = ExtResource( 2 )

[node name="YesButton" parent="Panel" index="0" instance=ExtResource( 1 )]
text = "Yes"

[node name="NoButton" parent="Panel" index="1" instance=ExtResource( 1 )]
text = "No"

[node name="Text" parent="Panel" index="2" instance=ExtResource( 3 )]
[connection signal="pressed" from="Panel/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Panel/NoButton" to="." method="_on_NoButton_pressed"]
